# workout_app

./: .env  .env.local.example  .gitattributes  .gitignore  ADMIN_IMPERSONATION_DESIGN.md  AGENTS.md  CLAUDE.md  DEPLOYMENT.md  HANDOFF.md  MIGRATION_NOTES.md  PHASE2_3_COMPLETE.md  PHASE2_3_READY.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PR_DESCRIPTION.md  QUESTIONS_ANSWERED.md  README.md  SUPABASE_AUTH_INTEGRATION_PLAN.md  SUPABASE_SETUP.md  TODO.md  docker-compose.stats.yml  docker-compose.yml  pyproject.toml  pytest.ini  readme.md  template.env
.github/: ADR_mcp_hosting_platform.md  EPIC_mcp_integration.md  ISSUE_oauth_setup.md  ISSUE_phase1_mvp_readonly.md  ISSUE_phase2_http_oauth.md  ISSUE_phase3_user_plans_volume.md  ISSUE_phase4_registry_publication.md  ISSUE_user_plan_schema.md  MCP_PLANNING_README.md
.github/workflows/: tests.yml  vercel-deploy.yml
database/: 010_setup.psql  020_AppUser.pgsql  026_Auth_Username_Generator.sql  027_Auth_Trigger.sql  030_Admin_Roles.sql  030_Plan.pgsql  030_Plan.psql  031_Impersonation_Audit.sql  035_Initial_Superadmin.sql  040_SessionSchedule.pgsql  040_SessionSchedule.sql  050_PerformedSession.pgsql  050_PerformedSession.sql  060_Exercise.pgsql  060_Exercise.psql  060_Exercise.sql  065_ExerciseMetadata_Normalized.sql  070_PerformedExercise.pgsql  070_PerformedExercise.psql  070_PerformedExercise.sql  071_SpecialSet.sql  072_ApplyDirectMetadataCopies.sql  073_ApplyCustomMetadata.sql  074_ApplyBaseExerciseMerges.sql  075_PopulateUnknownPlan.sql  078_Exercise_Improvements.sql  079_Add_Machine_Chest_Press.sql  080_seed_data.sql  110_views_full_exercise.sql  120_views_next_exercise_progression.sql  130_views_exercise_stats.sql  210_draft_session_exercises.sql  220_create_session_exercises.sql  230_session_helper_functions.sql  250_empty_workout_support.sql  260_rls_policies.sql  265_RLS_Performance_Updates.sql  270_backfill_exercise_sets.sql  270_fix_security_definer_views.sql  270_improved_session_interface.sql  (+35 more)
database/migrations/: 2025_11_22_athletic_programs.sql  2025_11_22_beginner_programs.sql  2025_11_22_bodybuilding_programs.sql  2025_11_22_hybrid_programs.sql  2025_11_22_powerbuilding_programs.sql  2025_11_22_powerlifting_programs.sql  2025_11_23_compound_exercise_metadata.sql  2025_11_23_exercise_reference_data.sql  2025_11_23_isolation_exercise_metadata.sql  2025_11_23_specialty_exercise_metadata.sql
database/queries/: FINAL_SUMMARY.md  README.md  README_empty_workout.md  RESPONSE_STRUCTURE.md  RESPONSE_V3.md  SECURITY_MODEL.md  SUMMARY.md  TESTING_REQUIRED.md  fix_empty_workout.sql  insert_empty_workout.sql  migrate_base_exercise.sql  run_all_tests.sh  run_tests_docker.sh  test_empty_workout.sql  test_rls_security.sql  test_v3_interface.sql  validate_syntax.sh  verify_empty_workout_fix.sql
database/rollback/: 270_rollback.sql  271_rollback.sql  272_rollback.sql  273_rollback.sql  274_rollback.sql
docs/: IMPLEMENTATION_QUICK_REFERENCE.md  IMPLEMENTATION_REVIEW.md  PHASE1_HANDOFF.md  README.md  SUPABASE_AUTH_CONFIG.md  VERCEL_DEPLOYMENT.md  VERIFICATION_REPORT.md  exercise-database-expansion-summary.md  new-exercises-master-list.md
docs/exercise-metadata/: compound-exercises.md  isolation-exercises.md  (+2 more)
documentation/: workout_app_domain.uml
native_app/: README.md
notebooks/: load_plan.ipynb  stats.ipynb  stats.py
scripts/: check_username_duplicates.py  verify_migrations_sqlite.py
supabase/: config.toml
tests/: conftest.py  settings.py  test_db_int_arr.py  test_positive_int_array.py  test_workout_app.py
web_frontend/: .env.example  .gitignore  README.md  middleware.ts  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  vercel.json
workout_app/: app.py  models.py  models_sqla.py
workout_plans/: Barbell_Program.yml  Body_Weight_Champ.yml  Julian_Plan_A.yml  Julian_Plan_B.yml  Minimal_Program.yml
(+167 files in other folders)
