[tool.poetry]
name = "workout_app"
version = "0.1.0"
description = ""
authors = ["Alexander Hultnér <ahultner@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^0.20.0"
click = "^8.1.3"
pydantic = {version = "^1.9.1", extras = ["ujson,email"]}
fastapi = "^0.79.0"
uvicorn = {version = "^0.18.2", extras = ["standard"]}
SQLAlchemy = "1.4.35"
asyncpg = "^0.26.0"
psycopg2-binary = "^2.9.3"
sqlmodel = "^0.0.6"
strictyaml = "^1.6.1"
"path.py" = "^12.5.0"
[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
bpython = "^0.22.1"
black = {version = "^22.6.0", extras = ["jupyter"]}
poetryup = "^0.9.0"
# sqlacodegen = {git = "https://github.com/agronholm/sqlacodegen.git", rev = "master"}
jupyterlab = "^3.4.3"
pandas = "^1.5.2"
matplotlib = "^3.6.2"
plotly = "^5.11.0"
ipywidgets = ">=7.6"
jupyter-dash = "^0.4.2"
statsmodels = "^0.13.5"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
