[tool.poetry]
name = "workout_app"
version = "0.1.0"
description = ""
authors = ["Alexander Hultnér <ahultner@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^0.20.0"
click = "^8.1.7"
pydantic = {version = "^1.10.14", extras = ["ujson,email"]}
fastapi = "^0.79.1"
uvicorn = {version = "^0.18.3", extras = ["standard"]}
SQLAlchemy = "1.4.35"
asyncpg = "^0.26.0"
psycopg2-binary = "^2.9.9"
sqlmodel = "^0.0.6"
strictyaml = "^1.7.3"
"path.py" = "^12.5.0"
withings-api = "^2.4.0"
[tool.poetry.dev-dependencies]
pytest = "^7.4.4"
bpython = "^0.22.1"
black = {version = "^22.12.0", extras = ["jupyter"]}
# sqlacodegen = {git = "https://github.com/agronholm/sqlacodegen.git", rev = "master"}
jupyterlab = "^3.6.7"
pandas = "^1.5.3"
matplotlib = "^3.8.3"
plotly = "^5.19.0"
ipywidgets = ">=8.1.2"
jupyter-dash = "^0.4.2"
statsmodels = "^0.13.5"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
