[project]
name = "workout_app"
version = "0.1.0"
description = ""
readme = "readme.md"
requires-python = ">=3.10,<4.0"
authors = [
    { name = "Alexander Hultnér", email = "ahultner@gmail.com" },
]
dependencies = [
    "python-dotenv>=1.0.1,<2.0.0",
    "click>=8.1.7,<9.0.0",
    "pydantic[email]>=2.12.4,<3.0.0",
    "pydantic-settings>=2.4.0,<3.0.0",
    "fastapi>=0.111.0,<0.112.0",
    "uvicorn[standard]>=0.30.0,<0.31.0",
    "sqlalchemy>=2.0.29,<2.1.0",
    "asyncpg>=0.30.0,<0.31.0",
    "psycopg2-binary>=2.9.9,<3.0.0",
    "sqlmodel>=0.0.27,<0.0.28",
    "strictyaml>=1.7.3,<2.0.0",
    "path.py>=12.5.0,<13.0.0",
    "typer>=0.12.3,<0.13.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1,<10.0.0",
    "pytest-asyncio>=1.3.0,<2.0.0",
    "pytest-xdist>=3.8.0,<4.0.0",
    "pytest-cov>=7.0.0,<8.0.0",
    "pytest-timeout>=2.4.0,<3.0.0",
    "supabase>=2.24.0,<3.0.0",
    "websockets>=13.1,<14.0",
    "bpython>=0.26.0,<0.27.0",
    "mypy>=1.13.0,<2.0.0",
    "jupyterlab>=4.4.10,<5.0.0",
    "pandas>=2.3.3,<3.0.0",
    "matplotlib>=3.10.7,<4.0.0",
    "plotly>=6.4.0,<7.0.0",
    "ipywidgets>=8.1.8,<9.0.0",
    "jupyter-dash>=0.4.2,<0.5.0",
    "statsmodels>=0.14.5,<0.15.0",
    "ruff>=0.7.1,<0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true

[tool.ruff]
target-version = "py313"
line-length = 100
extend-exclude = [
    "bpython.py",
    "database",
    "documentation",
    "docs",
    "notebooks",
    "workout_app/models_sqla.py",
    "workout_app/scripts",
]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"workout_app/app.py" = ["F401", "F403", "F405"]

[tool.ruff.format]
quote-style = "double"
skip-magic-trailing-comma = false
line-ending = "auto"
